data/derived/comb/progs/unify/prog8098.ml.out
Characters 272-273:
  |Thresh(e1, e2, e3, e4)->buildThresh(x, y, x, y);;
                                       ^
Error: This expression has type float but an expression was expected of type
         expr
